<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:layout_margin="5dp"
        android:layout_width="match_parent" android:gravity="center_vertical"
        android:layout_height="wrap_content" android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText android:singleLine="true"
                android:id="@+id/edt_set_wlink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_wlink" />

        </android.support.design.widget.TextInputLayout>

        <Button android:layout_marginLeft="5dp"
            android:id="@+id/btn_setlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set" />
    </LinearLayout>

    <LinearLayout android:layout_margin="5dp"
        android:layout_width="match_parent" android:gravity="center_vertical"
        android:layout_height="wrap_content" android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_set_masterpass"
                android:layout_width="match_parent" android:singleLine="true"
                android:layout_height="wrap_content"
                android:hint="@string/set_mast_pass" />

        </android.support.design.widget.TextInputLayout>

        <Button android:layout_marginLeft="5dp"
            android:id="@+id/btn_masterpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set" />
    </LinearLayout>
</LinearLayout>